DP0.2 Tutorial updates

--- a/DP0.2/tutorial1_reading_objects.ipynb
+++ b/DP0.2/tutorial1_reading_objects.ipynb
@@ -20,20 +20,16 @@
     "  3. Apply cuts to the catalog using GCR functionalities\n",
     "  4. Access the DP0.2 object catalog directly using parquet functions for more advanced read-in options\n",
     "\n",
-    "Future tasks\n",
-    "  1. Understand how to filter based on the SRV science release cuts through both read methods\n",
-    "  2. Simultaneously access these catalogs and LSST functionality (through e.g. running analysistools directly on the data)\n",
-    "  3. Access the SRV validation set/ run those for your sample\n",
+    "__Sections__:\n",
+    " - Accessing the object catalog with the GCR\n",
+    " - Reading the data through the GCR\n",
     "\n",
-    "__Logistics__: This notebook is intended to be run through the JupyterHub NERSC interface available here: https://jupyter.nersc.gov. To setup your NERSC environment, please follow the instructions available here: https://confluence.slac.stanford.edu/display/LSSTDESC/Using+Jupyter+at+NERSC\n",
-    "\n",
-    "__Other notes__: \n",
-    "   * If you restart your kernel, or if it automatically restarts for some reason, all imports and variables will become undefined so, you probably will have to re-run everything."
+    "__Logistics__: This notebook is intended to be run through the JupyterHub NERSC interface available here: https://jupyter.nersc.gov. To setup your NERSC environment, please follow the instructions available here: https://confluence.slac.stanford.edu/display/LSSTDESC/Using+Jupyter+at+NERSC\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
